--- a/src/main/resources/templates/host.html
+++ b/src/main/resources/templates/host.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>layout 后台大布局 - Layui</title>
@@ -75,6 +75,8 @@
 
     <div class="layui-body" id="contentMain">
         <!-- 内容主体区域 -->
+        </br>
+        <button data-method="createHost" class="layui-btn">CreateHost</button>
         <table class="layui-hide" id="host"></table>
         <button data-method="createVm" class="layui-btn">CreateVm</button>
         <table class="layui-hide" id="vm" lay-filter="vm"></table>
