--- a/src/main/resources/templates/host.html
+++ b/src/main/resources/templates/host.html
@@ -2,74 +2,23 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>layout 后台大布局 - Layui</title>
+    <title>KVM - Layui</title>
     <link th:href="@{/layui/css/layui.css}" rel="stylesheet"/>
 </head>
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <div class="layui-logo">layui 后台布局</div>
+        <div class="layui-logo">KVM</div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
-        <ul class="layui-nav layui-layout-left">
-            <li class="layui-nav-item"><a href="">控制台</a></li>
-            <li class="layui-nav-item"><a href="">商品管理</a></li>
-            <li class="layui-nav-item"><a href="">用户</a></li>
-            <li class="layui-nav-item"><a href="javascript:">其它系统</a>
-                <dl class="layui-nav-child">
-                    <dd>
-                        <a href="">邮件管理</a>
-                    </dd>
-                    <dd>
-                        <a href="">消息管理</a>
-                    </dd>
-                    <dd>
-                        <a href="">授权管理</a>
-                    </dd>
-                </dl>
-            </li>
-        </ul>
         <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item"><a href="/logout">退了</a></li>
         </ul>
     </div>
 
-    <div class="layui-side layui-bg-black">
+    <div class="layui-side layui-bg-gray">
         <div class="layui-side-scroll">
             <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
-            <ul class="layui-nav layui-nav-tree" lay-filter="test">
-                <li class="layui-nav-item layui-nav-itemed"><a class=""
-                                                               href="javascript:">所有商品</a>
-                    <dl class="layui-nav-child">
-                        <dd>
-                            <a href="javascript:">列表一</a>
-                        </dd>
-                        <dd>
-                            <a href="javascript:">列表二</a>
-                        </dd>
-                        <dd>
-                            <a href="javascript:">列表三</a>
-                        </dd>
-                        <dd>
-                            <a href="">超链接</a>
-                        </dd>
-                    </dl>
-                </li>
-                <li class="layui-nav-item"><a href="javascript:">解决方案</a>
-                    <dl class="layui-nav-child">
-                        <dd>
-                            <a href="javascript:">列表一</a>
-                        </dd>
-                        <dd>
-                            <a href="javascript:">列表二</a>
-                        </dd>
-                        <dd>
-                            <a href="">超链接</a>
-                        </dd>
-                    </dl>
-                </li>
-                <li class="layui-nav-item"><a href="">云市场</a></li>
-                <li class="layui-nav-item"><a href="">发布商品</a></li>
-            </ul>
+            <div id="tree" class="demo-tree-more"></div>
         </div>
     </div>
 
