--- a/src/main/resources/templates/host.html
+++ b/src/main/resources/templates/host.html
@@ -29,7 +29,7 @@
         <table class="layui-hide" id="cluster"></table>
         <button data-method="createHost" class="layui-btn">CreateHost</button>
         <table class="layui-hide" id="host"></table>
-        <table class="layui-hide" id="hostUnlink"></table>
+        <table class="layui-hide" id="hostUnlink" lay-filter="hostUnlink"></table>
         <button data-method="createVm" class="layui-btn">CreateVm</button>
         <table class="layui-hide" id="vm" lay-filter="vm"></table>
     </div>
