--- a/src/main/resources/templates/host.html
+++ b/src/main/resources/templates/host.html
@@ -52,6 +52,7 @@
     <a class="layui-btn layui-btn-xs" lay-event="start">Start</a>
     <a class="layui-btn layui-btn-xs" lay-event="shutdown">Shutdown</a>
     <a class="layui-btn layui-btn-xs" lay-event="console">Console</a>
+    <a class="layui-btn layui-btn-xs" lay-event="memoryStat">memoryStat</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">delete</a>
 </script>
 <script type="text/html" id="hostTool">
